# the-big-learn

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  CURRICULUM.md  DESIGN.md  MANIFEST.in  PRODUCT.md  README.md  README_RUNTIME.md  ROADMAP.md  TODOS.md  pyproject.toml  setup  setup.py
annotations/da-xue/: README.md  starter.annotations.json
annotations/schema/: line-record.schema.json
books/chengyu-catalog/: catalog.json
books/da-xue/: catalog.json
books/daodejing/: catalog.json
books/lunyu/: catalog.json
books/mengzi/: catalog.json
books/qian-zi-wen/: catalog.json
books/san-zi-jing/: catalog.json
books/sanguo-yanyi/: catalog.json
books/sunzi-bingfa/: catalog.json
books/zhong-yong/: catalog.json
evals/fixtures/: da-xue-reading-session.json
flashcards/bank/: qinmin-reading-debate.json
flashcards/schema/: bank-entry.schema.json
flashcards/templates/: default-variation-policy.json
scripts/: build_four_books_source_store.py  verify_starter_data.py
tests/: test_bootstrap.py  test_build_source_store.py  test_claude_host.py  test_cli.py  test_codex_host.py  test_flashcards.py  test_gemini_host.py  test_host_command_contract.py  test_packaging.py  test_progress.py  test_reference_data.py  test_rendering.py  test_repository.py  test_runtime.py  test_skill_metadata.py  test_source_catalog.py  test_updates.py
the_big_learn/: __init__.py  answers.py  bootstrap.py  claude_host.py  cli.py  codex_host.py  data_paths.py  flashcards.py  four_books.py  progress.py  rendering.py  repository.py  runtime.py  source_catalog.py  updates.py
(+658 files in other folders)
